==> ESoPe-GmbH/esopublic/source/mcu/espressif/esp32/mcu_uart.c <==
#include "../../mcu.h"
#include "../esp32/mcu_internal.h"
#include "module/fifo/fifo.h"
#include <string.h>
#include "hal/uart_ll.h"
#include <sdkconfig.h>
#include "driver/uart_select.h"
#include "esp_rom_gpio.h"
#define gpio_pad_select_gpio	esp_rom_gpio_pad_select_gpio
#define UART_ISR_ATTR     IRAM_ATTR
#define UART_MALLOC_CAPS  (MALLOC_CAP_INTERNAL | MALLOC_CAP_8BIT)
#define UART_ISR_ATTR
#define UART_MALLOC_CAPS  MALLOC_CAP_DEFAULT

mcu_uart_t mcu_uart_init(uint8_t num, MCU_IO_PIN tx, MCU_IO_PIN rx)
{
	mcu_uart_t handle;

	// Clear if maximum number of uarts is reached.
	if(mcu_current_uart_handler >= MCU_PERIPHERY_DEVICE_COUNT_UART || num > MCU_UART_MAX_NUM)
		MCU_RETURN_ERROR(MCU_ERROR_UART_NOT_AVAILABLE, NULL); 

	handle = &mcu_uart_handler[mcu_current_uart_handler];
	memset(handle, 0, sizeof(struct mcu_uart_s));

	_apply_default_uart_config(&handle->config);
 
	handle->hw.unit = num;		
	handle->hw.io_tx = tx;
	handle->hw.io_rx = rx;	
	handle->hw.io_rts = PIN_NONE;
	handle->hw.io_cts = PIN_NONE;
	handle->hw.transmit_buffer_size = 0;		
	handle->hw.receive_buffer_size = 8192;								

	mcu_uart_set_pin_gpio(handle, false);

	mcu_io_set_pullup(rx, true);
	mcu_uart_set_config(handle, &handle->config);

	uart_set_select_notif_callback(num, _uart_isr_event);

	_uart_handler_hash[num] = handle;

	mcu_current_uart_handler++;
	return (mcu_uart_t)handle;
}

MCU_RESULT mcu_uart_set_param(mcu_uart_t h, uint32_t baud, uint8_t databits, uint8_t parity, uint8_t stopbits)
{
    uart_parity_t p = UART_PARITY_DISABLE;
    uart_stop_bits_t st = UART_STOP_BITS_1;
    uart_word_length_t db = UART_DATA_8_BITS;

//    uart_config_t uart_config = {
//        .baud_rate = baud,
//        .data_bits = db == 8 ? UART_DATA_8_BITS : UART_DATA_7_BITS,
//        .parity    = p == 'E' ? UART_PARITY_EVEN : p == 'O' ? UART_PARITY_ODD : UART_PARITY_DISABLE,
//        .stop_bits = st == 1 ? UART_STOP_BITS_1 : UART_STOP_BITS_2,
//        .flow_ctrl = UART_HW_FLOWCTRL_DISABLE
//    };

	if(h==NULL)
		MCU_RETURN_ERROR(MCU_ERROR_UART_INVALID, MCU_ERROR_UART_INVALID);
	
	switch(databits)
	{
		case 7:		db = UART_DATA_7_BITS; break;
		case 8:		db = UART_DATA_8_BITS; break;
		default:	MCU_RETURN_ERROR(MCU_ERROR_UART_DATABITS_INVALID, MCU_ERROR_UART_DATABITS_INVALID);
	}

	switch(parity)
	{
		case 'N':	p = UART_PARITY_DISABLE;	break;
		case 'O':	p = UART_PARITY_ODD; 		break;
		case 'E':	p = UART_PARITY_EVEN;		break;
		default:	MCU_RETURN_ERROR(MCU_ERROR_UART_PARITY_INVALID, MCU_ERROR_UART_PARITY_INVALID);
	}

	switch(stopbits)
	{
		case 1:		st = UART_STOP_BITS_1; break;
		case 2:		st = UART_STOP_BITS_2; break;
		default:	MCU_RETURN_ERROR(MCU_ERROR_UART_STOPBITS_INVALID, MCU_ERROR_UART_STOPBITS_INVALID);
	}
//	uart_param_config(h->num, &uart_config);

//	DBG_INFO("UART %d Parameter: %d %d %c %d\n", h->num, baud, databits, parity, stopbits);
	h->config.baudrate = baud;
	h->config.databits = databits;
	h->config.parity = parity;
	h->config.stopbits = stopbits;

	uart_set_word_length(h->hw.unit, db);
	uart_set_parity(h->hw.unit, p);
	uart_set_stop_bits(h->hw.unit, st);
	// uart_set_hw_flow_ctrl(h->hw.unit, UART_HW_FLOWCTRL_DISABLE, 0);
	// uart_set_mode(h->hw.unit, UART_MODE_UART);
	return mcu_uart_set_baudrate(h, baud);
//	return MCU_OK;
}

MCU_RESULT mcu_uart_set_baudrate(mcu_uart_t h, uint32_t baudrate)
{
	if(h==NULL)
		MCU_RETURN_ERROR(MCU_ERROR_UART_INVALID, MCU_ERROR_UART_INVALID);

	h->config.baudrate = baudrate;

	if(ESP_OK == uart_set_baudrate(h->hw.unit, baudrate))
		return MCU_OK;
	else
	{
		DBG_INFO("Error setting UART %d baudrate to %d\n", h->hw.unit, baudrate);
		MCU_RETURN_ERROR(MCU_ERROR_UART_BAUDRATE_INVALID, MCU_ERROR_UART_BAUDRATE_INVALID);
	}
}

bool mcu_uart_transmit_ready(mcu_uart_t h)
{
	if(h==NULL)
		return false;

	if(!h->config.use_direct_transmit_interrupt)
		return true;
	
	uart_dev_t* dev = UART_LL_GET_HW(h->hw.unit);
	return uart_ll_is_tx_idle(dev);
}

void mcu_uart_putc(mcu_uart_t h, int data)
{
	if(h==NULL)
		return;

	uart_write_bytes(h->hw.unit, (char*)&data, 1);
}

void mcu_uart_puts(mcu_uart_t h, uint8_t *data, uint16_t len)
{
	if(h == NULL || len == 0)
		return;

	uart_write_bytes(h->hw.unit, (char*)data, len);
}

int mcu_uart_available(mcu_uart_t h)
{
	size_t len;
	if(h==NULL)
		return 0;

	if(ESP_OK == uart_get_buffered_data_len(h->hw.unit, &len))
		return len;

	return 0;
}
