==> ESoPe-GmbH/esopublic/source/mcu/st/stm32f0/mcu_uart.c <==
#include "../../mcu.h"
#include "../stm32f0/mcu_internal.h"
#include "module/fifo/fifo.h"
#include <string.h>
#define MCU_UART_INIT_HANDLER(h, n)													\
		{																	\
	h->num = n;													\
	h->alternate_receive = NULL;								\
	h->use_transmit_buffer = false;								\
	h->tx_lvl = MCU_INT_LVL_OFF;								\
	h->transmit_buffer_length = 0;								\
	h->transmit_buffer_cnt = 0;									\
	mcu_uart_handler_hash[n] = h;								\
		}

mcu_uart_t mcu_uart_init(uint8_t num, MCU_IO_PIN tx, MCU_IO_PIN rx)
{
	mcu_uart_handler_ctx* handle;

	if(mcu_current_uart_handler >= MCU_PERIPHERY_DEVICE_COUNT_UART)
		MCU_RETURN_ERROR(MCU_ERROR_UART_NOT_AVAILABLE, NULL); // Es gibt keine freie UART mehr!

	handle = &mcu_uart_handler[mcu_current_uart_handler];

	if(num == 1)
	{
		if(!(tx == PA_9 || tx == PB_6))
			MCU_RETURN_ERROR(MCU_ERROR_UART_INVALID, NULL);
		if(!(rx == PA_10 || rx == PB_7))
			MCU_RETURN_ERROR(MCU_ERROR_UART_INVALID, NULL);

		MCU_UART_INIT_HANDLER(handle, 1);
		handle->h_uart.Instance = USART1;

		// USART1 TX -> DMA2 Stream 7, Channel 7
		// USART1 RX -> DMA2 Stream 2/5, Channel 4
//		handle->dma_tx = DMA2_Stream7_IRQn;
//		handle->dma_rx = DMA2_Stream2_IRQn;
		handle->irq = USART1_IRQn;

//		handle->h_dma_tx.Instance = DMA2_Stream7;
//		handle->h_dma_tx.Init.Channel = DMA_CHANNEL_4;
//		handle->h_dma_rx.Instance = DMA2_Stream2;
//		handle->h_dma_rx.Init.Channel = DMA_CHANNEL_4;
	}
	else if(num == 2)
	{
		if(!(tx == PA_2 || tx == PA_14 || tx == PD_5))
			MCU_RETURN_ERROR(MCU_ERROR_UART_INVALID, NULL);
		if(!(rx == PA_3 || rx == PA_15 || rx == PD_6))
			MCU_RETURN_ERROR(MCU_ERROR_UART_INVALID, NULL);

		MCU_UART_INIT_HANDLER(handle, 2);
		handle->h_uart.Instance = USART2;
		// USART2 TX -> DMA1 Stream 6, Channel 4
		// USART2 RX -> DMA1 Stream 5, Channel 4
//		handle->dma_tx = DMA1_Stream6_IRQn;
//		handle->dma_rx = DMA1_Stream5_IRQn;
		handle->irq = USART2_IRQn;

//		handle->h_dma_tx.Instance = DMA1_Stream6;
//		handle->h_dma_tx.Init.Channel = DMA_CHANNEL_4;
//		handle->h_dma_rx.Instance = DMA1_Stream5;
//		handle->h_dma_rx.Init.Channel = DMA_CHANNEL_4;
	}
	else if(num == 3)
	{
		if(!(tx == PB_10 || tx == PC_4 || tx == PC_10 || tx == PD_8))
			MCU_RETURN_ERROR(MCU_ERROR_UART_INVALID, NULL);
		if(!(rx == PB_11 || rx == PC_5 || rx == PC_11 || rx == PD_9))
			MCU_RETURN_ERROR(MCU_ERROR_UART_INVALID, NULL);

		MCU_UART_INIT_HANDLER(handle, 3);
		handle->h_uart.Instance = USART3;

		// USART3 TX -> DMA1 Stream 3, Channel 4
		// USART3 RX -> DMA1 Stream 1, Channel 4
//		handle->dma_tx = DMA1_Stream3_IRQn;
//		handle->dma_rx = DMA1_Stream1_IRQn;
		handle->irq = USART3_4_IRQn;

//		handle->h_dma_tx.Instance = DMA1_Stream3;
//		handle->h_dma_tx.Init.Channel = DMA_CHANNEL_4;
//		handle->h_dma_rx.Instance = DMA1_Stream1;
//		handle->h_dma_rx.Init.Channel = DMA_CHANNEL_4;
	}
	else if(num == 4)
	{
		if(!(tx == PA_0 || tx == PC_10))
			MCU_RETURN_ERROR(MCU_ERROR_UART_INVALID, NULL);
		if(!(rx == PA_1 || rx == PC_11))
			MCU_RETURN_ERROR(MCU_ERROR_UART_INVALID, NULL);

		MCU_UART_INIT_HANDLER(handle, 4);
		handle->h_uart.Instance = USART4;

		// UART4 TX -> DMA1 Stream 4, Channel 4
		// UART4 RX -> DMA1 Stream 2, Channel 4
//		handle->dma_tx = DMA1_Stream4_IRQn;
//		handle->dma_rx = DMA1_Stream2_IRQn;
		handle->irq = USART3_4_IRQn;

//		handle->h_dma_tx.Instance = DMA1_Stream4;
//		handle->h_dma_tx.Init.Channel = DMA_CHANNEL_4;
//		handle->h_dma_rx.Instance = DMA1_Stream2;
//		handle->h_dma_rx.Init.Channel = DMA_CHANNEL_4;
	}
	else
		MCU_RETURN_ERROR(MCU_ERROR_UART_INVALID, NULL);

	handle->io_tx = tx;
	handle->io_rx = rx;

	handle->h_uart.Init.BaudRate = 115200;
	handle->h_uart.Init.WordLength = UART_WORDLENGTH_8B;
	handle->h_uart.Init.StopBits = UART_STOPBITS_1;
	handle->h_uart.Init.Parity = UART_PARITY_NONE;
	handle->h_uart.Init.Mode = UART_MODE_TX_RX;
	handle->h_uart.Init.HwFlowCtl = UART_HWCONTROL_NONE;
	handle->h_uart.Init.OverSampling = UART_OVERSAMPLING_16;
	handle->h_uart.Init.OneBitSampling = UART_ONE_BIT_SAMPLE_DISABLE;
	handle->h_uart.AdvancedInit.AdvFeatureInit = UART_ADVFEATURE_NO_INIT;

//	if(num < 7) // 7 and 8 do not use DMA!
//	{
//		handle->h_dma_tx.Init.Direction = DMA_MEMORY_TO_PERIPH;
//		handle->h_dma_tx.Init.PeriphInc = DMA_PINC_DISABLE;
//		handle->h_dma_tx.Init.MemInc = DMA_MINC_ENABLE;
//		handle->h_dma_tx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
//		handle->h_dma_tx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
//		handle->h_dma_tx.Init.Mode = DMA_NORMAL;
//		handle->h_dma_tx.Init.Priority = DMA_PRIORITY_LOW;
//		handle->h_dma_tx.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
//
////		handle->h_dma_rx.Init.Direction = DMA_PERIPH_TO_MEMORY;
////		handle->h_dma_rx.Init.PeriphInc = DMA_PINC_DISABLE;
////		handle->h_dma_rx.Init.MemInc = DMA_MINC_ENABLE;
////		handle->h_dma_rx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
////		handle->h_dma_rx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
////		handle->h_dma_rx.Init.Mode = DMA_NORMAL;
////		handle->h_dma_rx.Init.Priority = DMA_PRIORITY_LOW;
////		handle->h_dma_rx.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
//	}

	mcu_uart_handler_hash[num] = handle;

	if (HAL_UART_Init(&handle->h_uart) != HAL_OK)
	{
		MCU_RETURN_ERROR(MCU_ERROR_UART_INVALID, NULL);
	}

//	HAL_NVIC_SetPriority(handle->dma_tx, 0, 0);
//	HAL_NVIC_EnableIRQ(handle->dma_tx);
	HAL_NVIC_SetPriority(handle->irq, 0, 0);
	HAL_NVIC_EnableIRQ(handle->irq);

	mcu_current_uart_handler++;
	return (mcu_uart_t)handle;
}

MCU_RESULT mcu_uart_set_param(mcu_uart_t h, uint32_t baud, uint8_t databits, uint8_t parity, uint8_t stopbits)
{
	mcu_uart_handler_ctx* handle;
	bool has_parity = false;
	if(h==NULL)
		MCU_RETURN_ERROR(MCU_ERROR_UART_INVALID, MCU_ERROR_UART_INVALID);

	handle = (mcu_uart_handler_ctx*)h;

	switch(parity)
	{
	case 'N':	handle->h_uart.Init.Parity = UART_PARITY_NONE;	break;
	case 'O':	handle->h_uart.Init.Parity = UART_PARITY_ODD; 	has_parity = true; break;
	case 'E':	handle->h_uart.Init.Parity = UART_PARITY_EVEN;	has_parity = true; break;
	default:	MCU_RETURN_ERROR(MCU_ERROR_UART_PARITY_INVALID, MCU_ERROR_UART_PARITY_INVALID);
	}

	switch(databits)
	{
	case 7:		handle->h_uart.Init.WordLength = has_parity ? UART_WORDLENGTH_8B : UART_WORDLENGTH_7B; break;
	case 8: 	handle->h_uart.Init.WordLength = has_parity ? UART_WORDLENGTH_9B : UART_WORDLENGTH_8B; break;
	default:	MCU_RETURN_ERROR(MCU_ERROR_UART_DATABITS_INVALID, MCU_ERROR_UART_DATABITS_INVALID);
	}

	switch(stopbits)
	{
	case 1:		handle->h_uart.Init.StopBits = UART_STOPBITS_1; break;
	case 2:		handle->h_uart.Init.StopBits = UART_STOPBITS_2; break;
	default:	MCU_RETURN_ERROR(MCU_ERROR_UART_STOPBITS_INVALID, MCU_ERROR_UART_STOPBITS_INVALID);
	}

	return mcu_uart_set_baudrate(h, baud);
}

MCU_RESULT mcu_uart_set_baudrate(mcu_uart_t h, uint32_t baudrate)
{
	mcu_uart_handler_ctx* handle;

	if(h==NULL)
		MCU_RETURN_ERROR(MCU_ERROR_UART_INVALID, MCU_ERROR_UART_INVALID);

	handle = (mcu_uart_handler_ctx*)h;

	handle->h_uart.Init.BaudRate = baudrate;

//	if(UART_SetConfig(&handle->h_uart) != HAL_OK)
	if (HAL_UART_Init(&handle->h_uart) != HAL_OK)
		MCU_RETURN_ERROR(MCU_ERROR_UART_BAUDRATE_INVALID, MCU_ERROR_UART_BAUDRATE_INVALID);

	return MCU_OK;
}

bool mcu_uart_transmit_ready(mcu_uart_t h)
{
	if(h==NULL)
		return true;

	return HAL_UART_GetState(&((mcu_uart_handler_ctx*)h)->h_uart) == HAL_UART_STATE_READY;
}

void mcu_uart_putc(mcu_uart_t h, int data)
{
	if(h==NULL)
		return;

	uint32_t tick = HAL_GetTick();
	while(HAL_UART_GetState(&((mcu_uart_handler_ctx*)h)->h_uart) != HAL_UART_STATE_READY && HAL_GetTick() - tick < 1000)
	{

	}

	if(HAL_UART_GetState(&((mcu_uart_handler_ctx*)h)->h_uart) != HAL_UART_STATE_READY)
	{
		HAL_UART_Abort(&((mcu_uart_handler_ctx*)h)->h_uart);
		//		HAL_UART_Init(&handle->h_uart);
		//		return;
	}

//	if(((mcu_uart_handler_ctx*)h)->num < 7)
//		HAL_UART_Transmit_DMA(&((mcu_uart_handler_ctx*)h)->h_uart, (uint8_t*)&data, 1);
//	else
//	{
		if(((mcu_uart_handler_ctx*)h)->use_transmit_buffer)
			HAL_UART_Transmit_IT(&((mcu_uart_handler_ctx*)h)->h_uart, (uint8_t*)&data, 1);
		else
			HAL_UART_Transmit(&((mcu_uart_handler_ctx*)h)->h_uart, (uint8_t*)&data, 1, 1000);
//	}
}

void mcu_uart_puts(mcu_uart_t h, uint8_t *data, int16_t len)
{
	if(h == NULL || len == 0)
		return;

	uint32_t tick = HAL_GetTick();
	while(HAL_UART_GetState(&((mcu_uart_handler_ctx*)h)->h_uart) != HAL_UART_STATE_READY && HAL_GetTick() - tick < 1000)
	{

	}

	if(HAL_UART_GetState(&((mcu_uart_handler_ctx*)h)->h_uart) != HAL_UART_STATE_READY)
	{
		HAL_UART_Abort(&((mcu_uart_handler_ctx*)h)->h_uart);
//		HAL_UART_Init(&handle->h_uart);
//		return;
	}

//	if(((mcu_uart_handler_ctx*)h)->num < 7)
//		HAL_UART_Transmit_DMA(&((mcu_uart_handler_ctx*)h)->h_uart, data, len);
//	else
//	{
		if(((mcu_uart_handler_ctx*)h)->use_transmit_buffer)
			HAL_UART_Transmit_IT(&((mcu_uart_handler_ctx*)h)->h_uart, data, len);
		else
			HAL_UART_Transmit(&((mcu_uart_handler_ctx*)h)->h_uart, data, len, 1000);
//	}
}

int mcu_uart_available(mcu_uart_t h)
{
	if(h==NULL)
		return 0;

	return (int)fifo_data_available(&((mcu_uart_handler_ctx*)h)->fifo);
}
